Refactor BookRentalService